# tasketor

./: .appveyor.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  README.md  TOOLCHAIN.md  bootstrap.bat  build.bat  build.sh  conanfile.txt
cmake/: NSIS.template.in  OSLinux.cmake  OSWindows.cmake  fetch_boost.cmake
doc/: concept.md
docs/: Timetable.xlsx  Untitled Diagram.drawio  concept.md  data_structure.drawio
inc/: C_DbHandle.h  C_Project.h  db_tables.h  main.h
include/: C_DbHandle.h  C_Project.h  main.h  utils.h  version.h.in
nsis/: CMakeLists.txt
patches/: bootstrap.bat  test.bat
res/: svn.rc
scripts/: __environment.bat  _setenv.bat  addPath.bat
scripts/ci/: update_cmake.sh
src/: C_Project.cpp  main.cpp
test/: CMakeLists.txt  test_boost_locale.cpp  test_c_project.cpp
tests/: CMakeLists.txt  test_boost_locale.cpp  test_boost_process.cpp  test_c_project.cpp
tools/: build_boost.bat  get_boost.sh  get_sqlite3.sh
wxfb/: readme.txt
